change link home page and delete folder pages

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </div>
                 
                 <div>
-                    <a href="pages/home.html"><button type="button" class="bebas" >ENTER</button></a>
+                    <a href="home.html"><button type="button" class="bebas" >ENTER</button></a>
                 </div>
 
                 <div>
-                    <a href="pages/contact.html"><button type="button" class="bebas" >CONTACT</button></a>   
+                    <a href="contact.html"><button type="button" class="bebas" >CONTACT</button></a>   
                 </div>
 
             </div>
